@@ -90,6 +90,9 @@ grub_emu_SOURCES = commands/boot.c commands/cat.c commands/cmp.c	\
 
 grub_emu_LDFLAGS = $(LIBCURSES)
 
+sbin_SCRIPTS += grub-install
+grub_install_SOURCES = util/i386/pc/grub-install.in
+
 # Modules.
 pkglib_MODULES = _linux.mod linux.mod normal.mod	\
 	_multiboot.mod multiboot.mod aout.mod		\
